--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
  font-family: 'Josefin Sans', sans-serif;
  background-color: white;
  width: 100%;
- /* height: 100vh; */
+ height: 100vh;
  padding: 4em;
  overflow: hidden;
 }
@@ -108,6 +108,9 @@ p {
 .prew:hover {
  color: red;
 }
+ .main, .close-tab {
+  display:none;
+ }
 @media (max-width: 375px) {
  h1 {
   font-size: 1.5rem;
@@ -148,9 +151,6 @@ p {
  top: -50px;
  right:-150px;
  border-radius: 40px;
-}
-.main, .close-tab {
- display:none;
 }
 
 @media (max-width: 375px) {
@@ -195,6 +195,7 @@ p {
   left:100px;
  }
   .close-tab {
+    display: block;
      width: 20px;
      position: absolute;
      top: -45px;
@@ -222,8 +223,7 @@ p {
   border-top: 2px solid rgb(199, 197, 197);
   color: rgb(199, 197, 197)
  }
-
+.hidden {
+  display: none;
 }
- .hidden {
-    display: none;
- }
+}
