--- a/index.css
+++ b/index.css
@@ -227,3 +227,13 @@ p {
   display: none;
 }
 }
+.blur {
+  position: absolute;
+  top: 0%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(240, 241, 240, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
+}
